// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<button
  className="sc-bdVaJa bkVfZj"
  type="button"
>
  Hello
</button>
`;

exports[`renders correctly 2`] = `
<a
  href="https://www.compfest.id/"
>
  <button
    className="sc-bdVaJa bkVfZj"
    href="https://www.compfest.id/"
    type="button"
  >
    Hi
  </button>
</a>
`;

exports[`renders correctly 3`] = `
<a
  download={true}
  href="https://www.compfest.id/images/common/bgmobile_jargon_acad_compe_landing.svg"
>
  <button
    className="sc-bdVaJa bkVfZj"
    download={true}
    href="https://www.compfest.id/images/common/bgmobile_jargon_acad_compe_landing.svg"
    type="button"
  >
    Hi
  </button>
</a>
`;
